--- a/templates/line-chart.html
+++ b/templates/line-chart.html
@@ -1,12 +1,13 @@
-<html>
+<!DOCTYPE html>
+  <html>
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
+
         <title>Flask App</title>
     </head>
     <body>
@@ -24,17 +25,14 @@
                 </ul>
               </div>
             </div>
-          </nav> 
-      
+          </nav>
+
       </body>
 
   <head>
-
-    <div id="barchart"></div>
-
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
-      google.charts.load('current', {'packages':['bar']});
+      google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
 
       function drawChart() {
@@ -45,24 +43,22 @@
             {% else %}
                 ['{{ key }}', {{ value }}],
             {% endif %}
-            {% endfor %}
+        {% endfor %}
         ]);
 
         var options = {
-          chart: {
-            title: 'Bar-Chart',
-            subtitle: 'Sales, Expenses, and Profit: 2014-2017',
-          },
-          bars: 'vertical' // Required for Material Bar Charts.
+          title: 'Line Chart',
+          curveType: 'function',
+          legend: { position: 'bottom' }
         };
 
-        var chart = new google.charts.Bar(document.getElementById('barchart_material'));
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
 
-        chart.draw(data, google.charts.Bar.convertOptions(options));
+        chart.draw(data, options);
       }
     </script>
   </head>
   <body>
-    <div id="barchart_material" style="width: 900px; height: 500px;"></div>
+    <div id="curve_chart" style="width: 900px; height: 500px"></div>
   </body>
 </html>
