--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/google-charts/bar-chart">Bar-Chart</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/google-charts/line-chart">Line-Chart</a>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
